Finished How-To section, including populating with info, adding images, etc. Also added media queries (scaling) for home page, and made visual adjustments to the header (ex. removed US country flag and fixed register button letter g getting cut off.

--- a/frontend/src/components/BackgroundImage/BackgroundImage.css
+++ b/frontend/src/components/BackgroundImage/BackgroundImage.css
@@ -11,40 +11,56 @@
 .overlay {
   position: absolute;
   top: 50%;
-  left: 60%;
-  transform: translate(-50%, -50%);
-  text-align: center; /* Center the text horizontally */
+  right: 5%; /* Adjust the right positioning as needed */
+  transform: translateY(-50%);
+  text-align: right; /* Align the text to the right */
   color: white;
-  display: flex; /* Use flexbox */
-  flex-direction: column; /* Stack elements vertically */
-  align-items: flex-end; /* Align items to the right */
 }
 
 .overlay h1 {
   font-size: 3rem;
-  text-align: right; /* Align the h1 text to the right */
 }
 
 .overlay p {
   font-size: 1.5rem;
-  text-align: right; /* Align the p text to the right */
-}
-
-.overlay button {
-  padding: 10px 20px;
-  font-size: 1rem;
-  background-color: #319531;
-  font-family: "Calibri", sans-serif;
-  border: none;
-  color: white;
-  cursor: pointer;
-}
-
-.overlay button:hover {
-  background-color: #90ee90;
 }
 
 .village {
   color: lightgreen;
   text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+  .overlay {
+    width: 70%;
+    right: 50%; /* Adjust the right positioning as needed */
+    transform: translateX(50%);
+    text-align: right; /* Align the text to the right */
+  }
+
+  .overlay h1 {
+    font-size: 2.5rem;
+  }
+
+  .overlay p {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .overlay {
+    width: 70%;
+    right: 0%; /* Adjust the right positioning as needed */
+    transform: translateY(-50%);
+    text-align: right; /* Align the text to the right */
+  }
+
+  .overlay h1 {
+    font-size: 2rem;
+  }
+
+  .overlay p {
+    font-size: 1rem;
+  }
 }
